<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_32dp"
            android:paddingVertical="@dimen/space_24dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animLogin"
                android:layout_width="@dimen/space_250dp"
                android:layout_height="@dimen/space_250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_login"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLoginMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16dp"
                android:text="@string/login_text_message"
                android:textSize="@dimen/font_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animLogin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16dp"
                android:hint="@string/hint_email"
                app:boxCornerRadiusBottomEnd="@dimen/space_26dp"
                app:boxCornerRadiusBottomStart="@dimen/space_26dp"
                app:boxCornerRadiusTopEnd="@dimen/space_26dp"
                app:boxCornerRadiusTopStart="@dimen/space_26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginMessage"
                app:startIconDrawable="@drawable/round_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16dp"
                android:hint="@string/hint_password"
                app:boxCornerRadiusBottomEnd="@dimen/space_26dp"
                app:boxCornerRadiusBottomStart="@dimen/space_26dp"
                app:boxCornerRadiusTopEnd="@dimen/space_26dp"
                app:boxCornerRadiusTopStart="@dimen/space_26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/round_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_32dp"
                android:enabled="false"
                android:text="@string/login_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12dp"
                android:text="@string/register_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/loading_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>